feat: implemented benchmark and QuickBenchmark for 'Image_Conv' minor: update files and fotos:)